--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 //manifest.json
 
 {
-	"name": "CryptoLayer",
+	"name": "Cyphor",
 	"description": "Bringing seamless information privacy to all your messaging applications",
 	"version": "0.0.0.1",
 	"manifest_version": 2,
