--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
 	"background": {
 		"persistent": true,
 		"scripts": [
-			"/background/pageinit.background.js"
+			"/background/pageinit.background.js",
+			"/background/input.background.js"
 		]
 	},
 	"content_scripts": [
@@ -20,11 +21,13 @@
 			"matches": ["http://*/*", "https://*/*"],
 			"js": [
 				"/Cyphor/pageinit.content.js",
+				"/Cyphor/CyphorInput.content.js",
 				"/Cyphor/domParse.content.js",
 				"/Cyphor/channels.content.js",
 				"/Cyphor/iframes.content.js",
 				"/lib/crypto.content.js",
-				"/Cyphor/decrypt.content.js"
+				"/Cyphor/decrypt.content.js",
+				"/Cyphor/quickcrypt.content.js"
 			]
 		}
 	],
@@ -33,5 +36,15 @@
 	],
 	"browser_action": {
 		"default_title": "TEST_APP"
+	},
+	"commands": {
+		"quickcrypt": {
+			"suggested_key": {
+				"default": "Alt+Shift+E",
+				"windows": "Alt+Shift+E",
+				"mac": "Alt+Shift+E"
+			},
+			"description":"Initialize QuickCrypt"
+		}
 	}
 }
